--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -38,7 +38,7 @@ h1 {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 0;
+  /* z-index: -2; */
 }
 
 .video-hero {
@@ -50,11 +50,19 @@ h1 {
   justify-content: space-between;
 }
 
+.hero-video::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6);
+}
+
 .hero-content,
 .consult-overlay {
   position: relative;
   margin: 65px;
   z-index: 2;
+  
 }
 
 .navbar {
