Resolved conflict and applied stashed changes

--- a/src/app/modules/services/ai-and-iot-innovations/ai-and-iot-innovations.component.html
+++ b/src/app/modules/services/ai-and-iot-innovations/ai-and-iot-innovations.component.html
@@ -1,4 +1,7 @@
 <section class="hero-section">
+  <header>
+    <app-website-head-menu></app-website-head-menu>
+  </header>
   <div class="overlay">
     <h1>Smart Home & Office Automation</h1>
     <p>
