--- a/src/app/modules/services/software-solutions/software-solutions.component.html
+++ b/src/app/modules/services/software-solutions/software-solutions.component.html
@@ -1,6 +1,9 @@
 <section class="hero-section">
   <div class="background-blur"></div>
-  <div class="hero-overlay">
+  <header>
+    <app-website-head-menu></app-website-head-menu>
+  </header>
+  <div class="overlay">
     <div class="hero-text">
       <h1>Software Solutions</h1>
     </div>
@@ -206,9 +209,12 @@
       <h2>Explore Our Products</h2>
       <p>
         From custom platforms to powerful business tools, our products are built
-        to solve real challenges. Dive in and discover how we can enhance your workflow.
+        to solve real challenges. Dive in and discover how we can enhance your
+        workflow.
       </p>
-      <a routerLink="/products/products-overview" class="explore-btn">View Products</a>
+      <a routerLink="/products/products-overview" class="explore-btn"
+        >View Products</a
+      >
     </div>
     <div class="explore-image">
       <img src="assets/iMG/Products-Preview.jpg" alt="Product Preview" />
