--- a/src/app/components/consultation/consultation.component.css
+++ b/src/app/components/consultation/consultation.component.css
@@ -1,13 +1,45 @@
 .banner {
+  position: relative;
   background: url("../../../assets/iMG/pexels-cottonbro-4101143.jpg")
     center/cover no-repeat;
   color: white;
   text-align: center;
-  padding: 100px 20px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.background-blur {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(4px);
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 0;
+}
+
+.banner-text {
+  position: relative;
+  z-index: 1;
+  text-align: center;
 }
 
 .banner-text h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
+  font-weight: 500;
+  color: var(--accent);
+  margin-bottom: 10px;
+}
+
+.banner-text p {
+  color: var(--white);
+  font-size: 1.2rem;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .info-section {
@@ -30,7 +62,7 @@
 }
 
 .text-side {
-  flex: 1;
+  flex: 1;  
 }
 
 .text-side h2 {
@@ -59,8 +91,9 @@
 }
 
 .testimonials {
-  /* background: #daa520; */
-  padding: 50px 20px;
+  background: var(--secondary);
+  color: var(--white);
+  padding: 80px 20px;
   text-align: center;
 }
 
@@ -70,11 +103,11 @@
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+  color: var(--secondary);
 }
 
 .testimonial {
-  background: #00274f;
-  color: #fff;
+  background: var(--accent);
   padding: 20px;
   border-radius: 8px;
   max-width: 300px;
@@ -84,12 +117,14 @@
 .faq-section {
   padding: 50px 20px;
   text-align: center;
+  background-color: var(--accent);
+  color: var(--secondary);
 }
 
 .faq-section button {
   margin-top: 15px;
   padding: 10px 20px;
-  background-color: #43a047;
+  background-color: var(--primary);
   color: white;
   border: none;
   border-radius: 5px;
@@ -100,7 +135,7 @@
  padding: 1rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  background: white;
+  background-color: var(--white);
 }
 
 .contact-footer {
@@ -143,13 +178,15 @@
   padding: 30px 20px;
   text-align: center;
   font-style: italic;
-  background-color: #e8f5e9;
+  color: var(--white);
+  background-color: var(--secondary);
 }
 
 .live-chat {
   padding: 40px 20px;
-  background: #f1f8e9;
+  background-color: var(--accent);
   text-align: center;
+  color: var(--secondary);
 }
 
 .chat-placeholder {
