--- a/src/app/modules/services/software-solutions/software-solutions.component.css
+++ b/src/app/modules/services/software-solutions/software-solutions.component.css
@@ -1,6 +1,3 @@
-/* software-development.component.css */
-
-/* Layout container for left and right halves */
 .software-layout {
   display: flex;
   flex-wrap: wrap;
@@ -13,7 +10,7 @@
   flex: 1 1 40%;
   display: flex;
   align-items: center;
-  padding: 0px 40px;
+  padding: 60px 40px;
   margin-top: -40px;
   background-color: var(--secondary);
   color: #fff;
@@ -55,7 +52,8 @@
 
 .hero-section {
   position: relative;
-  background: url("../../../../assets/iMG/SoftwareSolution.jpg") no-repeat center center/cover;
+  background: url("../../../../assets/iMG/SoftwareSolution.jpg") no-repeat
+    center center/cover;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -71,12 +69,12 @@
   height: 100%;
   backdrop-filter: blur(4px);
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
+  z-index: 0;
 }
 
 .hero-overlay {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   padding: 40px;
   border-radius: 10px;
   max-width: 1200px;
@@ -118,7 +116,6 @@
   align-items: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-
 
 .icon-circle {
   background-color: var(--accent);
@@ -163,6 +160,7 @@
     grid-template-columns: 1fr 1fr;
     gap: 20px;
   }
+
 }
 .design-section {
   padding: 0px 20px;
@@ -272,12 +270,11 @@
 .explore-image img {
   max-width: 100%;
   width: 100%;
-  height: 250px; 
-  object-fit: cover; 
+  height: 250px;
+  object-fit: cover;
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
-
 
 .get-started-section {
   display: flex;
@@ -335,7 +332,7 @@
 .app-development-section {
   text-align: center;
   padding: 40px 20px;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
 }
 
 .app-development-section h2 {
@@ -395,7 +392,7 @@
 .cta-button button {
   background-color: #d9002c;
   border: 1px solid #000;
-  color:#ffffff;
+  color: #ffffff;
   padding: 10px 25px;
   font-size: 14px;
   font-weight: 600;
@@ -405,13 +402,13 @@
 
 .cta-button button:hover {
   background-color: #ffffff;
-  color:#000;
+  color: #000;
 }
 
 .gallery-section {
   text-align: center;
   padding: 40px 20px;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
 }
 
 .gallery-section h2 {
