--- a/src/app/components/omnipurse-academy/omnipurse-academy.component.css
+++ b/src/app/components/omnipurse-academy/omnipurse-academy.component.css
@@ -811,3 +811,33 @@ h1 .highlight {
   font-size: 0.9rem;
   border-top: 1px solid gold;
 }
+
+
+/* Links */
+.tas-footer-heading {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: #DAA520;
+}
+
+.tas-footer-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.tas-footer-nav li {
+  margin-bottom: 10px;
+}
+
+.tas-footer-nav a {
+  text-decoration: none;
+  color: #ffffff;
+  transition: color 0.3s;
+}
+
+.tas-footer-nav a:hover {
+  color: #DAA520;
+}
+/* footer */
