--- a/src/app/components/omnipurse-academy/omnipurse-academy.component.html
+++ b/src/app/components/omnipurse-academy/omnipurse-academy.component.html
@@ -292,6 +292,22 @@
 
 <section class="footer">
   <div class="contact-access-pane">
+<div class="contact-item">
+      <!-- <div class="icon address-icon"></div> -->
+      <!-- Company Links -->
+    <div class="tas-footer-section tas-footer-links">
+      <h4 class="tas-footer-heading">LINKS</h4>
+      <ul class="tas-footer-nav">
+        <li><a href="">Home</a></li>
+        <li><a href="/about-us">About us</a></li>
+        <li><a href="/services/services-overview">Our services</a></li>
+        <li><a href="/products/products-overview">Products</a></li>
+        <li><a href="/faq">FAQs</a></li>
+        <li><a href="/contact-us">Contact Us</a></li>
+      </ul>
+    </div>
+    </div>
+
     <div class="contact-item">
       <div class="icon address-icon"></div>
       <h4>ADDRESS</h4>
